--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
-<title>Balance sheet of CTO</title>
+<title>Expenditures</title>
+<style>
+iframe {
+	width: 77%;
+	height: 2000px;
+	display: block;
+	margin: auto;
+}
+</style>
+
 <body>
 	<p>Check below</p>
-	<iframe width=77% height=2000 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false">
+	
+	</iframe>
 </body>
