--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@ iframe {
 	display: block;
 	margin: auto;
 }
-</style>
 
-<body>
-	<p>Check below</p>
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false">
-	
-	</iframe>
+footer {
+	width: auto;
+	height: auto;
+	display: block;
+	margin: auto;
+	text-align: center;
+}
+
+h1 {
+	text-align: center;
+}
+
+</style>
+<h1>Ram aam khata hai expenditure bar jata hai</h1>
+	<iframe width=77% height=2000 align="middle" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false"></iframe>
 </body>
+<br>
+<footer>Sponsored by
+	<br>
+	<img width=100px height=100px src="https://www.kulzy.com/uploads//brand/large/vimalpanmasala_20161128143924.jpg"</img>
+</footer>
