--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ footer {
 	text-align: center;
 }
 
-header {
+h1 {
 	text-align: center;
 }
 
@@ -36,7 +36,7 @@ body {
 	color: #454545;
 }
 </style>
-<header>Ram aam khata hai expenditure bur jata hai</header>
+<h1>Ram aam khata hai aur expenditure baar jata hai</1>
 <div class="fr-cont">
 	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false"></iframe>
 </div>	
