--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 	display: block;
 	margin: auto;
 	border: 0;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .fr-cont {
 	position: relative;
 	overflow: hidden;
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 footer {
