--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 	height: 2000px;
 	display: block;
 	margin: auto;
-	border: 0;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	border: 0;		
 }
 
 .fr-cont {
 	position: relative;
 	overflow: hidden;
-	overflow-x: hidden;
-	overflow-y: hidden;
 }
 
 footer {
@@ -41,7 +37,7 @@ body {
 </style>
 <h1>Ram aam khata hai aur expenditure baar jata hai</h1>
 <div class="fr-cont">
-	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false"></iframe>
+	<iframe scrolling="no" class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false"></iframe>
 </div>	
 </body>
 <br>
