--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
 </style>
 <h1>Ram aam khata hai aur expenditure baar jata hai</h1>
 <div class="fr-cont">
-	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false&amp;chrome=false&amp;range=a1%3Ag80"></iframe>
+	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false&amp;chrome=false"></iframe>
 </div>	
 </body>
 <br>
