--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <style>
 
 .fr {
-	width: 75%;
-	height: 2000px;
+	width: 72%;
+	height: 400px;
 	display: block;
 	margin: auto;
 	border: 0;		
@@ -16,7 +16,6 @@
 
 .fr-cont {
 	position: relative;
-	overflow: hidden;
 }
 
 footer {
@@ -33,11 +32,12 @@ h1 {
 
 body {
 	color: #454545;
+	overflow: hidden;
 }
 </style>
 <h1>Ram aam khata hai aur expenditure baar jata hai</h1>
 <div class="fr-cont">
-	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false&amp;chrome=false"></iframe>
+	<iframe class="fr" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh4YIy52ztRJe5morcFsUiuryHPsnf4H6PqNOAIeYMR7CCanKHSF1fGnP9HP1IiVbfadZapIyynCLl/pubhtml?widget=true&amp;headers=false&amp;chrome=false&gridlines=false"></iframe>
 </div>	
 </body>
 <br>
